<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/general_new_session"
        android:textSize="31sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/dialog_new_session_edit_text"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:inputType="number"
        android:hint="@string/general_target_session_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_new_session_submit_button"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        android:backgroundTint="@color/accentColor"
        android:text="@string/general_let_s_go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>