<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_home_hours_text_view"
            android:layout_marginStart="14dp"
            android:text="00"
            android:textSize="100sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_margin="16dp"
                android:text="@string/general_hours"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/fragment_home_minus_action_view"
            android:background="@drawable/circle_red"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:padding="12dp"
                android:src="@drawable/minus"
                android:layout_width="72dp"
                android:layout_height="72dp"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/fragment_home_plus_action_view"
            android:background="@drawable/circle_green"
            android:layout_margin="12dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_action_add"
                android:layout_width="72dp"
                android:layout_height="72dp"/>

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_margin="12dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/general_goal"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/fragment_home_target_hours"
            android:text="00 hrs"
            android:textSize="21sp"
            android:layout_marginStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ProgressBar
        style="@style/Widget.MaterialComponents.LinearProgressIndicator"
        android:max="16"
        android:progress="3"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_home_reset_session_button"
        android:backgroundTint="@color/red"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:text="@string/general_reset"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_home_start_session_button"
        android:backgroundTint="@color/accentColor"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:text="@string/general_start_new_session"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>