<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    android:layout_margin="12dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/gray"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_alignParentStart="true"
                android:layout_margin="12dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="26sp"
                    android:text="@string/general_session_target_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/item_trends_target_hours_view"
                        android:textSize="21sp"
                        android:text="21"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textSize="14sp"
                        android:text="Hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:layout_marginTop="11dp"
                    android:textSize="26sp"
                    android:text="@string/general_coding_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/item_trends_coding_hours_view"
                        android:textSize="21sp"
                        android:text="5"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textSize="14sp"
                        android:text="Hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_margin="12dp"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">



                <ImageView
                    android:id="@+id/cover_image_view"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/coding" />



            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_marginStart="12dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/start_line"
                android:layout_width="42dp"
                android:layout_height="42dp"/>

            <TextView
                android:id="@+id/item_trends_start_date_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:text="May 21, 2001"
                android:textSize="16sp" />

            <ImageView
                android:src="@drawable/finish_line"
                android:layout_width="42dp"
                android:layout_height="42dp"/>

            <TextView
                android:id="@+id/item_trends_end_date_view"
                android:textSize="16sp"
                android:text="May 22, 2001"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="end"
            android:layout_margin="12dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/item_trends_delete_action_view"
                android:text="@string/general_delete"
                app:cornerRadius="12dp"
                android:padding="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>